# self-learning

./: .gitignore  README.md  go.work
C++/:  Vectors.cpp
C++/Intro/: Conditionals.cpp  Functions.cpp  HelloWorld  HelloWorld.cpp  IntAndFloatTypes.cpp  Output  Output.cpp  Switch.cpp  UserInput.cpp  Variables  Variables.cpp  intfloattypes  inttypes  userinput
C++/Kattis/: Apaxiaaaaaaaaaaaans!.cpp  Spavanac.cpp
C++/Leetcode/: LC1-NestedLoop.cpp  LC1-UMap.cpp  LC11-MaxAreaWater.cpp  LC121-Stock-MaxArray.cpp  LC128.cpp  LC20-ValidParentheses.cpp  LC21.cpp  LC217-ContainsDupe.cpp  LC238.cpp  LC242.cpp  LC347.cpp  LC36.cpp  LC49-UMap.cpp  LC503-NextGreaterElemII.cpp  LC53.cpp  LC659.cpp  LC739-DailyTemps.cpp  LC853-CarFleet.cpp
C++/Memory/: ArrayAndFn.cpp  ArrayAndPtrs.cpp  Pointers.cpp
C++/Namespaces/: Animals.h  Cat.cpp  Cat.h  a.out
C++/ObjectOriented/: Cat.cpp  Classes.cpp  Constructors.cpp  Data Members.cpp  InhConstructors.cpp  Static.cpp  StringStreams.cpp
Go/: go.mod
Go/Channels/: main.go  printRand.go
Go/DataStructs/: bst.go  stack.go  stack_test.go
Java LC/: LC21.java  LC53.java
Leetcode/: LC21.java  LC217.java  LC21Better-Recursive.java
Log/: 2023 - July 16.txt  2023 - July 21.txt  2023 - July 22.txt  2023 - Weekly Report (July 24-30).txt  2023 - Weekly Report (July 31 - Aug 6).txt  LeetcodeLog.txt
Python/: Functions.py  LC217.py  Lists.py  OOP.py
fft_stuff/: CMakeLists.txt  README.md  example_rocfft.cpp  input  random.cpp  recursive_fft.cpp
java-lc/: LC20.java  README.md
python/: LC1431.py  LC1768.py  TranKevinPythonForLoops.py  app.py
(+109 files in other folders)
